--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AWS Opsworks Node.js Example</title>
+  <title>AW Opsworks Node.js Example</title>
 </head>
 <body>
   <h1>AWS OpsWorks Node.js Example</h1>
